# Sistema-de-Notificacoes-Assincronas-Avancado

./: .env  README.md  main.py  pyproject.toml  requirements.txt
src/: main.py
src/core/repository/: notification_repository.py
src/core/service/: notification_service.py
src/http/rest/controller/: notify_controller.py
src/http/rest/dto/: notification_dto.py
src/messaging/rabbitmq/: consumer_rabbitmq.py  publisher_rabbitmq.py
src/persistence/database/: db.py
src/persistence/models/: notify_model.py
tests/: test_consumer.py  test_publisher.py
